[package]
name = "streamdeck-counter"
version = "0.1.11"
edition = "2024"
authors = ["Veelume"]

[[bin]]
name = "plugin"
path = "src/main.rs"


[dependencies]
anyhow = "1"
const_format = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
streamdeck-lib = { git = "https://github.com/veelume/streamdeck-lib", tag = "v0.4.3" }
streamdeck-render = { git = "https://github.com/veelume/streamdeck-render", tag = "v0.1.3" }
crossbeam-channel = "0.5.15"
rodio = { version = "0.22.2", default-features = false, features = ["playback"] }
# Self-update check (GitHub releases). Sync + bundled TLS; will be replaced by
# streamdeck-lib's reqwest when this lifts into the lib.
ureq = "2"

# Windows-only: toast notification + custom URL-protocol registration for the
# "Update now" self-update flow.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Data_Xml_Dom", "UI_Notifications"] }
winreg = "0.52"
